// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Banner > renders with actions correctly 1`] = `
"<div class="banner relative z-50 w-full transition-colors bg-accent [--ui-accent:var(--ui-primary)]" data-banner-id="banner-banner" data-slot="banner">
  <!--v-if-->
  <div data-slot="banner-container" class="w-full max-w-(--ui-container) mx-auto px-4 sm:px-6 lg:px-8 flex items-center justify-between gap-3 h-12">
    <div data-slot="banner-left" class="hidden lg:flex-1 lg:flex lg:items-center"></div>
    <div data-slot="banner-center" class="flex items-center gap-1.5 min-w-0"><span class="iconify i-lucide:rocket size-5 shrink-0 text-accent-contrast pointer-events-none" aria-hidden="true" data-slot="banner-icon"></span>
      <div data-slot="banner-title" class="text-sm text-accent-contrast font-medium truncate">Title</div>
      <div data-slot="banner-actions" class="flex gap-1.5 shrink-0 isolate"><button type="button" data-slot="button" class="rounded-md font-medium inline-flex items-center disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:opacity-75 transition-colors outline-accent-focus focus-visible:outline-3 [--ui-accent:var(--ui-neutral)] text-accent-contrast bg-accent hover:bg-accent-hover active:bg-accent-hover disabled:bg-accent aria-disabled:bg-accent [--ui-control-px:--spacing(2)] [--ui-control-py:--spacing(1)] [--ui-control-gap:--spacing(1)] [--ui-control-icon:--spacing(4)] px-(--ui-control-px) py-(--ui-control-py) gap-(--ui-control-gap) text-xs">
          <!--v-if--><span data-slot="button-label" class="truncate">Learn more</span><span class="iconify i-lucide:arrow-right shrink-0 size-(--ui-control-icon)" aria-hidden="true" data-slot="button-trailingIcon"></span>
        </button></div>
    </div>
    <div data-slot="banner-right" class="lg:flex-1 flex items-center justify-end">
      <!--v-if-->
    </div>
  </div>
</div>"
`;

exports[`Banner > renders with actions slot correctly 1`] = `
"<div class="banner relative z-50 w-full transition-colors bg-accent [--ui-accent:var(--ui-primary)]" data-banner-id="banner-banner" data-slot="banner">
  <!--v-if-->
  <div data-slot="banner-container" class="w-full max-w-(--ui-container) mx-auto px-4 sm:px-6 lg:px-8 flex items-center justify-between gap-3 h-12">
    <div data-slot="banner-left" class="hidden lg:flex-1 lg:flex lg:items-center"></div>
    <div data-slot="banner-center" class="flex items-center gap-1.5 min-w-0">
      <!--v-if-->
      <!--v-if-->
      <div data-slot="banner-actions" class="flex gap-1.5 shrink-0 isolate">Actions slot</div>
    </div>
    <div data-slot="banner-right" class="lg:flex-1 flex items-center justify-end">
      <!--v-if-->
    </div>
  </div>
</div>"
`;

exports[`Banner > renders with as correctly 1`] = `
"<section class="banner relative z-50 w-full transition-colors bg-accent [--ui-accent:var(--ui-primary)]" data-banner-id="banner-banner" data-slot="banner">
  <!--v-if-->
  <div data-slot="banner-container" class="w-full max-w-(--ui-container) mx-auto px-4 sm:px-6 lg:px-8 flex items-center justify-between gap-3 h-12">
    <div data-slot="banner-left" class="hidden lg:flex-1 lg:flex lg:items-center"></div>
    <div data-slot="banner-center" class="flex items-center gap-1.5 min-w-0">
      <!--v-if-->
      <!--v-if-->
      <!--v-if-->
    </div>
    <div data-slot="banner-right" class="lg:flex-1 flex items-center justify-end">
      <!--v-if-->
    </div>
  </div>
</section>"
`;

exports[`Banner > renders with class correctly 1`] = `
"<div class="banner relative w-full transition-colors bg-accent [--ui-accent:var(--ui-primary)] z-10" data-banner-id="banner-banner" data-slot="banner">
  <!--v-if-->
  <div data-slot="banner-container" class="w-full max-w-(--ui-container) mx-auto px-4 sm:px-6 lg:px-8 flex items-center justify-between gap-3 h-12">
    <div data-slot="banner-left" class="hidden lg:flex-1 lg:flex lg:items-center"></div>
    <div data-slot="banner-center" class="flex items-center gap-1.5 min-w-0">
      <!--v-if-->
      <!--v-if-->
      <!--v-if-->
    </div>
    <div data-slot="banner-right" class="lg:flex-1 flex items-center justify-end">
      <!--v-if-->
    </div>
  </div>
</div>"
`;

exports[`Banner > renders with close correctly 1`] = `
"<div class="banner relative z-50 w-full transition-colors bg-accent [--ui-accent:var(--ui-primary)]" data-banner-id="banner-banner" data-slot="banner">
  <!--v-if-->
  <div data-slot="banner-container" class="w-full max-w-(--ui-container) mx-auto px-4 sm:px-6 lg:px-8 flex items-center justify-between gap-3 h-12">
    <div data-slot="banner-left" class="hidden lg:flex-1 lg:flex lg:items-center"></div>
    <div data-slot="banner-center" class="flex items-center gap-1.5 min-w-0">
      <!--v-if-->
      <!--v-if-->
      <!--v-if-->
    </div>
    <div data-slot="banner-right" class="lg:flex-1 flex items-center justify-end"><button type="button" data-slot="banner-close" aria-label="Close" class="rounded-md font-medium inline-flex items-center disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:opacity-75 transition-colors outline-accent-focus focus-visible:outline-3 [--ui-accent:var(--ui-neutral)] active:bg-accent-soft disabled:bg-transparent aria-disabled:bg-transparent [--ui-control-px:--spacing(2.5)] [--ui-control-py:--spacing(1.5)] [--ui-control-gap:--spacing(1.5)] [--ui-control-icon:--spacing(5)] py-(--ui-control-py) gap-(--ui-control-gap) text-sm px-(--ui-control-py) text-accent-contrast hover:bg-default/10 focus-visible:bg-default/10 -me-1.5 lg:me-0"><span class="iconify i-lucide:x shrink-0 size-(--ui-control-icon)" aria-hidden="true" data-slot="button-leadingIcon"></span>
        <!--v-if-->
        <!--v-if-->
      </button></div>
  </div>
</div>"
`;

exports[`Banner > renders with close slot correctly 1`] = `
"<div class="banner relative z-50 w-full transition-colors bg-accent [--ui-accent:var(--ui-primary)]" data-banner-id="banner-banner" data-slot="banner">
  <!--v-if-->
  <div data-slot="banner-container" class="w-full max-w-(--ui-container) mx-auto px-4 sm:px-6 lg:px-8 flex items-center justify-between gap-3 h-12">
    <div data-slot="banner-left" class="hidden lg:flex-1 lg:flex lg:items-center"></div>
    <div data-slot="banner-center" class="flex items-center gap-1.5 min-w-0">
      <!--v-if-->
      <!--v-if-->
      <!--v-if-->
    </div>
    <div data-slot="banner-right" class="lg:flex-1 flex items-center justify-end">Close slot</div>
  </div>
</div>"
`;

exports[`Banner > renders with closeIcon correctly 1`] = `
"<div class="banner relative z-50 w-full transition-colors bg-accent [--ui-accent:var(--ui-primary)]" data-banner-id="banner-banner" data-slot="banner">
  <!--v-if-->
  <div data-slot="banner-container" class="w-full max-w-(--ui-container) mx-auto px-4 sm:px-6 lg:px-8 flex items-center justify-between gap-3 h-12">
    <div data-slot="banner-left" class="hidden lg:flex-1 lg:flex lg:items-center"></div>
    <div data-slot="banner-center" class="flex items-center gap-1.5 min-w-0">
      <!--v-if-->
      <!--v-if-->
      <!--v-if-->
    </div>
    <div data-slot="banner-right" class="lg:flex-1 flex items-center justify-end">
      <!--v-if-->
    </div>
  </div>
</div>"
`;

exports[`Banner > renders with icon correctly 1`] = `
"<div class="banner relative z-50 w-full transition-colors bg-accent [--ui-accent:var(--ui-primary)]" data-banner-id="banner-banner" data-slot="banner">
  <!--v-if-->
  <div data-slot="banner-container" class="w-full max-w-(--ui-container) mx-auto px-4 sm:px-6 lg:px-8 flex items-center justify-between gap-3 h-12">
    <div data-slot="banner-left" class="hidden lg:flex-1 lg:flex lg:items-center"></div>
    <div data-slot="banner-center" class="flex items-center gap-1.5 min-w-0"><span class="iconify i-lucide:rocket size-5 shrink-0 text-accent-contrast pointer-events-none" aria-hidden="true" data-slot="banner-icon"></span>
      <div data-slot="banner-title" class="text-sm text-accent-contrast font-medium truncate">Title</div>
      <!--v-if-->
    </div>
    <div data-slot="banner-right" class="lg:flex-1 flex items-center justify-end">
      <!--v-if-->
    </div>
  </div>
</div>"
`;

exports[`Banner > renders with id correctly 1`] = `
"<div class="banner relative z-50 w-full transition-colors bg-accent [--ui-accent:var(--ui-primary)]" data-banner-id="banner-banner" data-slot="banner">
  <!--v-if-->
  <div data-slot="banner-container" class="w-full max-w-(--ui-container) mx-auto px-4 sm:px-6 lg:px-8 flex items-center justify-between gap-3 h-12">
    <div data-slot="banner-left" class="hidden lg:flex-1 lg:flex lg:items-center"></div>
    <div data-slot="banner-center" class="flex items-center gap-1.5 min-w-0">
      <!--v-if-->
      <!--v-if-->
      <!--v-if-->
    </div>
    <div data-slot="banner-right" class="lg:flex-1 flex items-center justify-end">
      <!--v-if-->
    </div>
  </div>
</div>"
`;

exports[`Banner > renders with leading slot correctly 1`] = `
"<div class="banner relative z-50 w-full transition-colors bg-accent [--ui-accent:var(--ui-primary)]" data-banner-id="banner-banner" data-slot="banner">
  <!--v-if-->
  <div data-slot="banner-container" class="w-full max-w-(--ui-container) mx-auto px-4 sm:px-6 lg:px-8 flex items-center justify-between gap-3 h-12">
    <div data-slot="banner-left" class="hidden lg:flex-1 lg:flex lg:items-center"></div>
    <div data-slot="banner-center" class="flex items-center gap-1.5 min-w-0">Leading slot
      <!--v-if-->
      <!--v-if-->
    </div>
    <div data-slot="banner-right" class="lg:flex-1 flex items-center justify-end">
      <!--v-if-->
    </div>
  </div>
</div>"
`;

exports[`Banner > renders with neutral color correctly 1`] = `
"<div class="banner relative z-50 w-full transition-colors bg-accent [--ui-accent:var(--ui-neutral)]" data-banner-id="banner-banner" data-slot="banner">
  <!--v-if-->
  <div data-slot="banner-container" class="w-full max-w-(--ui-container) mx-auto px-4 sm:px-6 lg:px-8 flex items-center justify-between gap-3 h-12">
    <div data-slot="banner-left" class="hidden lg:flex-1 lg:flex lg:items-center"></div>
    <div data-slot="banner-center" class="flex items-center gap-1.5 min-w-0"><span class="iconify i-lucide:rocket size-5 shrink-0 text-accent-contrast pointer-events-none" aria-hidden="true" data-slot="banner-icon"></span>
      <div data-slot="banner-title" class="text-sm text-accent-contrast font-medium truncate">Title</div>
      <!--v-if-->
    </div>
    <div data-slot="banner-right" class="lg:flex-1 flex items-center justify-end">
      <!--v-if-->
    </div>
  </div>
</div>"
`;

exports[`Banner > renders with target correctly 1`] = `
"<div class="banner relative z-50 w-full transition-colors bg-accent [--ui-accent:var(--ui-primary)] outline-(--ui-bg-default)/25 -outline-offset-3 has-[>a:focus-visible]:outline-3 hover:bg-accent-hover" data-banner-id="banner-banner" data-slot="banner"><a href="https://nuxt.com" rel="noopener noreferrer" target="_blank" class="focus:outline-none"><span class="absolute inset-0" aria-hidden="true"></span></a>
  <div data-slot="banner-container" class="w-full max-w-(--ui-container) mx-auto px-4 sm:px-6 lg:px-8 flex items-center justify-between gap-3 h-12">
    <div data-slot="banner-left" class="hidden lg:flex-1 lg:flex lg:items-center"></div>
    <div data-slot="banner-center" class="flex items-center gap-1.5 min-w-0">
      <!--v-if-->
      <!--v-if-->
      <!--v-if-->
    </div>
    <div data-slot="banner-right" class="lg:flex-1 flex items-center justify-end">
      <!--v-if-->
    </div>
  </div>
</div>"
`;

exports[`Banner > renders with title correctly 1`] = `
"<div class="banner relative z-50 w-full transition-colors bg-accent [--ui-accent:var(--ui-primary)]" data-banner-id="banner-banner" data-slot="banner">
  <!--v-if-->
  <div data-slot="banner-container" class="w-full max-w-(--ui-container) mx-auto px-4 sm:px-6 lg:px-8 flex items-center justify-between gap-3 h-12">
    <div data-slot="banner-left" class="hidden lg:flex-1 lg:flex lg:items-center"></div>
    <div data-slot="banner-center" class="flex items-center gap-1.5 min-w-0">
      <!--v-if-->
      <div data-slot="banner-title" class="text-sm text-accent-contrast font-medium truncate">Title</div>
      <!--v-if-->
    </div>
    <div data-slot="banner-right" class="lg:flex-1 flex items-center justify-end">
      <!--v-if-->
    </div>
  </div>
</div>"
`;

exports[`Banner > renders with title slot correctly 1`] = `
"<div class="banner relative z-50 w-full transition-colors bg-accent [--ui-accent:var(--ui-primary)]" data-banner-id="banner-banner" data-slot="banner">
  <!--v-if-->
  <div data-slot="banner-container" class="w-full max-w-(--ui-container) mx-auto px-4 sm:px-6 lg:px-8 flex items-center justify-between gap-3 h-12">
    <div data-slot="banner-left" class="hidden lg:flex-1 lg:flex lg:items-center"></div>
    <div data-slot="banner-center" class="flex items-center gap-1.5 min-w-0">
      <!--v-if-->
      <div data-slot="banner-title" class="text-sm text-accent-contrast font-medium truncate">Title slot</div>
      <!--v-if-->
    </div>
    <div data-slot="banner-right" class="lg:flex-1 flex items-center justify-end">
      <!--v-if-->
    </div>
  </div>
</div>"
`;

exports[`Banner > renders with to correctly 1`] = `
"<div class="banner relative z-50 w-full transition-colors bg-accent [--ui-accent:var(--ui-primary)] outline-(--ui-bg-default)/25 -outline-offset-3 has-[>a:focus-visible]:outline-3 hover:bg-accent-hover" data-banner-id="banner-banner" data-slot="banner"><a href="/getting-started" class="focus:outline-none"><span class="absolute inset-0" aria-hidden="true"></span></a>
  <div data-slot="banner-container" class="w-full max-w-(--ui-container) mx-auto px-4 sm:px-6 lg:px-8 flex items-center justify-between gap-3 h-12">
    <div data-slot="banner-left" class="hidden lg:flex-1 lg:flex lg:items-center"></div>
    <div data-slot="banner-center" class="flex items-center gap-1.5 min-w-0">
      <!--v-if-->
      <!--v-if-->
      <!--v-if-->
    </div>
    <div data-slot="banner-right" class="lg:flex-1 flex items-center justify-end">
      <!--v-if-->
    </div>
  </div>
</div>"
`;

exports[`Banner > renders with ui correctly 1`] = `
"<div class="banner relative z-50 w-full transition-colors bg-accent [--ui-accent:var(--ui-primary)]" data-banner-id="banner-banner" data-slot="banner">
  <!--v-if-->
  <div data-slot="banner-container" class="w-full max-w-(--ui-container) mx-auto px-4 sm:px-6 lg:px-8 flex items-center justify-between h-12 gap-6">
    <div data-slot="banner-left" class="hidden lg:flex-1 lg:flex lg:items-center"></div>
    <div data-slot="banner-center" class="flex items-center gap-1.5 min-w-0">
      <!--v-if-->
      <!--v-if-->
      <!--v-if-->
    </div>
    <div data-slot="banner-right" class="lg:flex-1 flex items-center justify-end">
      <!--v-if-->
    </div>
  </div>
</div>"
`;
